--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "j-pani-paicha-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js --verbose",
+    "test": "jest",
+    "lint": "eslint .",
+    "prod": "pm2 start server.js --name my-api"
   },
   "repository": {
     "type": "git",
@@ -21,10 +25,12 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "bcryptjs": "^3.0.2",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
